avg to-dos completed per day and day on which max to-dos was completed
