# src/controllers/todo.controller.ts
@@ -97,3 +97,25 @@ export const getOverdueTodoCount = async (req: Request, res: Response, next: Nex
         next(error);
     }
 };
+
+export const getDayWithMaxCompletedTasks = async (req: Request, res: Response, next: NextFunction) => {
+    try {
+        const results = await TodoService.getDayWithMaxCompletedTasks(res.locals.user as User);
+        res.status(200).json(results[0]);
+    } catch (error) {
+        next(error);
+    } 
+};
+
+
+
+export const getAvgCompletedPerDay = async (req: Request, res: Response, next: NextFunction) => {
+    try {
+        const avg = await TodoService.getAvgCompletedPerDay(res.locals.user as User);
+        res.status(200).json({
+            avgCompletedPerDay: avg
+        });
+    } catch (error) {
+        next(error);
+    } 
+};
